Made login validation.
* Made xhr from front-end.
* Sent configuration to app.

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
     <div class="navigations">
       <div class="login-section nav-section">
         <p>Have an Account?</p>
-        <a href="/login">Login</a>
+        <a href="/login.html">Login</a>
       </div>
 
       <div class="signup-section nav-section">
         <p>New user?</p>
-        <a href="/signup">Sign Up</a>
+        <a href="/signup.html">Sign Up</a>
       </div>
     </div>
 
