--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,6 @@
 <head>
   <title>Login page</title>
   <link rel="stylesheet" href="styles/login.css">
-  <script src="js/login.js"></script>
 </head>
 
 <body>
@@ -22,7 +21,7 @@
           <input type="password" name="password" id="password">
         </div>
 
-        <input type="button" value="Login" id="submit-btn">
+        <input type="submit" value="Login" id="submit-btn">
       </form>
     </section>
     <div id="message"></div>
