Added /login to serve login page.
* Attached templates to config.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div class="navigations">
       <div class="login-section nav-section">
         <p>Have an Account?</p>
-        <a href="/login.html">Login</a>
+        <a href="/login">Login</a>
       </div>
 
       <div class="signup-section nav-section">
