--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
       <div class="signup-section nav-section">
         <p>New user?</p>
-        <a href="/signup.html">Sign Up</a>
+        <a href="/sign-up">Sign Up</a>
       </div>
     </div>
 
